5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4501/executions/1764_1576.log
== TEST (2019-05-21 21:38:29) 
-- CODE:
from numpy import*
a=array(eval(input("v1: ")))
b=array(eval(input("v2: ")))
i=0
cont=0
while(i<size(a)):
	if(a[i]==b[i]):
		cont=cont+1
		i=i+1
		if(a<b):
			print("EUSAPIA")
		elif(a>b):
			print("BARSANULFO")
		else:
			print("EMPATE")
		
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 12:11:20) 
-- CODE:
from numpy import*
a=array(eval(input("v1: ")))
b=array(eval(input("v2: ")))
i=0
cont=0
while(i<size(a)):
	if(a[i]==b[i]):
		cont=cont+1
		i=i+1
		if(a<b):
			print("EUSAPIA")
		elif(a>b):
			print("BARSANULFO")
		else:
			print("EMPATE")
		
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 21:34:01) 
-- CODE:
from numpy import*
a=array(eval(input("v1: ")))
b=array(eval(input("v2: ")))
i=0
x=0
y=0
denominador=0
while(i<size(a)):
	if(x[i]):
		x=x+1
		if(a>b):
			x=x+1
			print("EUSAPIA")
		if(b>a):
			y=y+1
			print("BARSANULFO")
		if(a==b):
			x=x+1
			y=y+1
			print("EMPATE")
	
	
		
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 21:35:49) 
-- CODE:
from numpy import*
a=array(eval(input("v1: ")))
b=array(eval(input("v2: ")))
i=0
x=0
y=0
denominador=0
while(i<size(a)):
	if(a[i] and b[i]):
		x=x+1
		if(a>b):
			x=x+1
			print("EUSAPIA")
		if(b>a):
			y=y+1
			print("BARSANULFO")
		if(a==b):
			x=x+1
			y=y+1
			print("EMPATE")
	
	
		
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 21:36:34) 
-- CODE:
from numpy import*
a=array(eval(input("v1: ")))
b=array(eval(input("v2: ")))
i=0
x=0
y=0
denominador=0
while(i<size(a)):
	if(a[i] and b[i]):
		x=x+1
		if(a>b):
			x=x+1
			print("EUSAPIA")
		if(b>a):
			y=y+1
			print("BARSANULFO")
		if(a==b):
			x=x+1
			y=y+1
			print("EMPATE")
	
	
		
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-24 21:36:41) 
-- CODE:
from numpy import*
a=array(eval(input("v1: ")))
b=array(eval(input("v2: ")))
i=0
x=0
y=0
denominador=0
while(i<size(a)):
	if(a[i] and b[i]):
		x=x+1
		if(a>b):
			x=x+1
			print("EUSAPIA")
		if(b>a):
			y=y+1
			print("BARSANULFO")
		if(a==b):
			x=x+1
			y=y+1
			print("EMPATE")
	
	
		
	
-- EXECUTION TIME:
0.378808
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1764/1576/main.py", line 11, in <module>
    if(a>b):
ValueError: The truth value of an array with more than one element is ambiguous. Use a.any() or a.all()

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 22:00:45) 
-- CODE:
from numpy import*
a=array(eval(input("v1: ")))
b=array(eval(input("v2: ")))
i=0
x=0
y=0
denominador=0
while(i<size(a)):
	if(a[i]):
		if(a==1):
			x=x+1
			print("EUSAPIA")
		if(b==2):
			y=y+1
			print("BARSANULFO")
		if(a==b):
			x=x+1
			y=y+1
			print("EMPATE")

	
		
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-24 22:02:16) 
-- CODE:
from numpy import*
a=array(eval(input("v1: ")))
b=array(eval(input("v2: ")))
i=0
x=0
y=0
denominador=0
while(i<size(a)):
	if(a[i]):
		if(a>b):
			x=x+1
			print("EUSAPIA")
		if(b>a):
			y=y+1
			print("BARSANULFO")
		if(a==b):
			x=x+1
			y=y+1
			print("EMPATE")

	
		
	
-- EXECUTION TIME:
0.510698
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1764/1576/main.py", line 10, in <module>
    if(a>b):
ValueError: The truth value of an array with more than one element is ambiguous. Use a.any() or a.all()

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 10:47:36) 
-- CODE:
from numpy import*
a=array(eval(input("v1: ")))
b=array(eval(input("v2: ")))
i=0
x=0
y=0
while(i<size(a)):
	if(a[i]==11):
		if(b[i]==22):
			y=y+1
		elif(b[i]==33):
			y=y+1
	elif(a[i]==22):
		i=i+1
print("EUSAPIA")
print("BARSANULFO")
print("EMPATE")
			x=x+1
			y=y+1
			print("EMPATE")

	
		
	
-- ERROR:
File "XXXX", line 18
    x=x+1
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 10:48:23) 
-- CODE:
from numpy import*
a=array(eval(input("v1: ")))
b=array(eval(input("v2: ")))
i=0
x=0
y=0
while(i<size(a)):
	if(a[i]==11):
		if(b[i]==22):
			y=y+1
		elif(b[i]==33):
			y=y+1
	elif(a[i]==22):
		x=x+1
print("EUSAPIA")
print("BARSANULFO")
print("EMPATE")

	
		
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 10:51:30) 
-- CODE:
from numpy import*
a=array(eval(input("v1: ")))
b=array(eval(input("v2: ")))
i=0
x=0
y=0
while(i<size(a)):
	if(a[i]==11):
		if(b[i]==22):
			y=y+1
		elif(b[i]==33):
			y=y+1
	elif(a[i]==22):
		x=x+1
	print("EUSAPIA")
	print("BARSANULFO")
	print("EMPATE")

	
		
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 11:07:48) 
-- CODE:
from numpy import*
a=array(eval(input("v1: ")))
b=array(eval(input("v2: ")))
i=0
x=0
y=0
while(i<size(a)):
	if(a[i]==11):
		if(b[i]==22):
			y=y+1
		elif(b[i]==33):
			y=y+1
	elif(a[i]==22):
		x=x+1
		print("EUSAPIA")
	print("BARSANULFO")
print("EMPATE")

	
		
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 11:44:13) 
-- CODE:
from numpy import*
a=array(eval(input("v1: ")))
b=array(eval(input("v2: ")))
i=0
x=0
y=0
while(i<size(a)):
	if(a[i]==11):
		if(b[i]==22):
			y=y+1
		elif(b[i]==33):
			x=x+1
	elif(a[i]==22):
		if(b[i]==11):
			x=x+1
		elif(b[i]==33)	:
			y=y+1
	elif(a[i]==33)	:
		if(b[i]==11):
			y=y+1
		elif(b[i]==22)	:
			x=x+1
	i=i+1
print(size(a))	
if(sum(x)>sum(y)):
	print("EUSAPIA")
elif(sum(x)<sum(y)):
	print("BARSANULFO")
else:
	print("EMPATE")
		x=x+1
print("EUSAPIA")
print("BARSANULFO")
print("EMPATE")

	
		
	
-- ERROR:
File "XXXX", line 31
    x=x+1
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 11:44:50) 
-- CODE:
from numpy import*
a=array(eval(input("v1: ")))
b=array(eval(input("v2: ")))
i=0
x=0
y=0
while(i<size(a)):
	if(a[i]==11):
		if(b[i]==22):
			y=y+1
		elif(b[i]==33):
			x=x+1
	elif(a[i]==22):
		if(b[i]==11):
			x=x+1
		elif(b[i]==33)	:
			y=y+1
	elif(a[i]==33)	:
		if(b[i]==11):
			y=y+1
		elif(b[i]==22)	:
			x=x+1
	i=i+1
print(size(a))	
if(sum(x)>sum(y)):
	print("EUSAPIA")
elif(sum(x)<sum(y)):
	print("BARSANULFO")
else:
	print("EMPATE")

	
		
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-26 11:45:22) 
-- CODE:
from numpy import*
a=array(eval(input("v1: ")))
b=array(eval(input("v2: ")))
i=0
x=0
y=0
while(i<size(a)):
	if(a[i]==11):
		if(b[i]==22):
			y=y+1
		elif(b[i]==33):
			x=x+1
	elif(a[i]==22):
		if(b[i]==11):
			x=x+1
		elif(b[i]==33)	:
			y=y+1
	elif(a[i]==33)	:
		if(b[i]==11):
			y=y+1
		elif(b[i]==22)	:
			x=x+1
	i=i+1
print(size(a))	
if(sum(x)>sum(y)):
	print("EUSAPIA")
elif(sum(x)<sum(y)):
	print("BARSANULFO")
else:
	print("EMPATE")

	
		
	
-- EXECUTION TIME:
0.321501
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
EUSAPIA
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
EMPATE
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
BARSANULFO
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
